[metadata]
name = gradio_sidebar
version = attr: gradio_sidebar.__version__
description = A customizable sidebar component for Gradio interfaces.
long_description = file: docs/README.md
long_description_content_type = text/markdown
author = Broadfield Dev
author_email = dev@broadfield.com
maintainer = Broadfield Dev
maintainer_email = dev@broadfield.com
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.7
install_requires = 
    gradio>=3.0

[options.packages.find]
where = .
include = gradio_sidebar
