[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradio_sidebar"
version = "0.1.0"
description = "A package providing a sidebar for Gradio interfaces."
authors = ["Broadfield-dev"]  # Update with actual author
license = "LICENSE"
readme = "README.md"
homepage = "https://github.com/broadfield-dev/gradio_sidebar"
repository = "https://github.com/broadfield-dev/gradio_sidebar"
keywords = ["gradio", "ui", "sidebar"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.dependencies]
python = "^3.8"
gradio = "*"  # Adjust if a specific version is noted in requirements.txt
# Add additional dependencies based on requirements.txt, for example:
# requests = "^2.25.1"
