[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradio_sidebar"
version = "0.0.1" 
description = "A basic AI Agent system for Python."
keywords = ["python", "gradio", "sidebar", "gradio_sidebar", "plugin"]
authors = [
  { name="broadfield-dev" }
]
dependencies = [
  "gradio>=5.8.0",
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/broadfield-dev/Do_it_all"
"Issues" = "https://github.com/broadfield-dev/gradio_sidebar/issues"

[tool.setuptools.packages.find]
where = ["."]
